Fixing broken styles and tweaking strategy page markup to use styles correctly

--- a/app/assets/stylesheets/layout/common/_3_col.scss
+++ b/app/assets/stylesheets/layout/common/_3_col.scss
@@ -10,10 +10,7 @@
   @include column(12);
 
   @include respond-to($mq-m) {
-    @include column(4);
-    .l-2col-no-margin & {
-      @include column(4, 3);
-    }
+    @include column(4, 3);
   }
 }
 
